discussion/kv_engine/128254/128254_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'couchbase/mad-hatter' into 'couchbase/master'

* commit '1a98df22':
  MB-38845: Handle as flush-failure all KVStore::commit failure codes

Note: This merge also introduces the original CouchKVStore changes to
MagmaKVStore

Change-Id: I57d639b55fd598f83669fda04e2629bd10f3d1d1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2020-05-20 06:32:58.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2020-05-20 06:49:25.000000000
Message: 
Patch Set 6: Code-Review-1
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-20 06:52:30.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28168/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28168/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3717/ : ABORTED

Failure of a CTest test [2020-05-20T06:52:18.503Z] 243/392 Test #245: ep_testsuite_dcp.full_eviction.comp_passive .......................................................................Child terminated ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3717/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3717/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3808/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3808/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11592/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11592/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2279/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic.h:158:40: error: member access into incomplete type "Item" [clang-diagnostic-error]
        if (value != nullptr && --value->_rc_refcount == 0) {
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/persistence_callback.h:63:19: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::~SingleThreadedRCPtr" requested here
        cb(*this, item, mutationStatus);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/diskdockey.h:23:7: note: forward declaration of "Item"
class Item;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic.h:240:18: error: member access into incomplete type "Item" [clang-diagnostic-error]
            value->_rc_refcount++;
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic.h:139:23: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::gimme" requested here
        : value(other.gimme()) {
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/persistence_callback.h:63:19: note: in instantiation of member function "SingleThreadedRCPtr<Item, Item *, std::default_delete<Item> >::SingleThreadedRCPtr" requested here
        cb(*this, item, mutationStatus);
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/diskdockey.h:23:7: note: forward declaration of "Item"
class Item;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2279/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/atomic.h:158:40:
error: member access into incomplete type "Item" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2279/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2815/ : FAILURE

Failure of a CTest test [2020-05-20T06:46:51.718Z]  70/401 Test #181: ep-engine_ep_unit_tests.Persistent/STParamPersistentBucketTest .................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2815/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3756/ : FAILURE

Failure of a CTest test [2020-05-20T06:37:24.949Z]  90/404 Test #184: ep-engine_ep_unit_tests.Persistent/STParamPersistentBucketTest .................................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3756/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/795/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24117/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
